# HexaTrie

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/hex_trie/: dynamic_hex_trie.hpp  flat_hex_trie.hpp  typedef.hpp
test/: CMakeLists.txt  hex_trie_load_test.cpp
test/include/: hex_trie_fixture.hpp
